# yRealEstate-Backend

./: Cargo.toml  Dockerfile  README.md
db/: yrealestate.db
migrations/: 2412150000_create_users.sql  2412150001_create_properties.sql  2412150002_create_property_images.sql  2412150003_create_saved_properties.sql  2412150004_create_property_viewings.sql  2412150005_create_conversations.sql  2412150006_create_conversations_participants.sql  2412150007_create_messages.sql  2412150008_create_reviews.sql
src/: auth.rs  error.rs  main.rs  models.rs
src/handlers/: authentication.rs  messages.rs  mod.rs  properties.rs  users.rs
