[package]
name = "yrealestate_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6.2", features = ["cors"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite", "time"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
tower = "0.5.2"
time = "0.3"
anyhow = "1.0"
bcrypt= "0.16.0"
jsonwebtoken = "9.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4"] }
http= "1.2"